ansible/roles/operator-pipeline/templates/openshift/triggers/operator-hosted-pipeline-trigger.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    eventlistener:  operator-hosted-pipeline-github-listener
  name: operator-hosted-pipeline
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    # el- prefix means, that the service was created by EventListener.
    name: el-operator-hosted-pipeline-github-listener
